--- a/styel.css
+++ b/styel.css
@@ -114,3 +114,17 @@ ul li span {
 ul li span:hover {
   background: #edeef0;
 }
+
+@media (max-width: 380px) {
+  button {
+    border: none;
+    outline: none;
+    padding: 15px 20px;
+    font-size: 16px;
+    color: #fff;
+    background: #ff5945;
+    cursor: pointer;
+    border-radius: 40px;
+    transition: all ease 0.3s;
+  }
+}
